# NovaCore

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.bot  Dockerfile.frontend  Dockerfile.frontend.simple  EC2_DOCKER_DEPLOY.md  FRONTEND_COMPARISON.md  PROJECT_STRUCTURE.md  QUICK_TEST.md  README.md  README_DAO.md  ROADMAP.md  SECURITY.md  START_SERVICES.md  SYSTEM_READY.md  TEST_CHECKLIST.md  alembic.ini  cloudflare-tunnel.yml  docker-compose.full.yml  docker-compose.prod.no-reload.yml  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.cursor/: devran.md
.github/: pull_request_template.md
alembic/: env.py
app/: __init__.py  main.py
contracts/: AuroraConstitution.sol  AuroraPolicyConfig.sol
devran/: devran.persona.md
docs/: ACADEMY_DEVELOPMENT_SUMMARY.md  API_DOCUMENTATION.md  AURORA_JUSTICE_V2.md  AURORA_METRICS.md  AURORA_POLICY_VERSIONS.md  AURORA_STATE_ARCHITECTURE.md  BOT_KURULUM.md  BOT_SETUP.md  BOT_SETUP_REQUIRED.md  BOT_WEBHOOK_SETUP.md  BRIDGE_TOKEN_EXPLAINED.md  CLOUDFLARE_QUICK_START.md  CLOUDFLARE_SETUP.md  CLOUDFLARE_SSL_FIX.md  CLOUDFLARE_TUNNEL_SETUP.md  CLOUDFLARE_TUNNEL_STATUS.md  COHORT1_MESSAGE_TEMPLATE.md  COMPLETE_INTEGRATION_GUIDE.md  CORS_FINAL_FIX.md  CORS_FIX.md  CORS_FIX_APPLIED.md  CORS_FIX_STATUS.md  DAO_ACTIVATION_CHECKLIST.md  DAO_GOVERNANCE_FLOW.md  DAO_INTEGRATION.md  DEMO_FLOW.md  DEPLOYMENT.md  DNS_FIX.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_DEPLOYMENT.md  DOCKER_FULL_DEPLOYMENT.md  EC2_DEPLOYMENT.md  EC2_DOCKER_QUICKSTART.md  (+40 more)
(+345 files in other folders)
